--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ input, button {
   outline: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 body {
   background-color: #E6ECF0;
   font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
   text-rendering: optimizeLegibility !important;
-  -webkit-font-soothing: antialiased !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 .content {
@@ -26,6 +30,9 @@ header#main-header {
   height: 46px;
   background-color: #fff;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+
+  position: relative;
+  z-index: 1;
 }
 
 header#main-header .content {
@@ -50,6 +57,13 @@ header#main-header nav ul li {
   font-weight: bold;
 
   margin-left: 30px;
+
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+header#main-header nav ul li:hover {
+  filter: brightness(0.5);
 }
 
 header#main-header nav ul li:first-child {
@@ -97,4 +111,23 @@ header#main-header div.side button {
   font-size: 14px;
   color: #fff;
   border-radius: 16px;
+  transition: all 0.2s;
+}
+
+header#main-header div.side button:hover {
+  filter: brightness(0.9);
+}
+
+div.banner {
+  height: 380px;
+  width: 100%;
+  background-color: #3BB9E3;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  flex-direction: column;
+  
+  color: #fff;
 }
