--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 header#main-header {
   height: 46px;
   background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
 
   position: relative;
   z-index: 1;
@@ -130,4 +130,110 @@ div.banner {
   flex-direction: column;
   
   color: #fff;
+}
+
+div.bar {
+  height: 59px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+div.bar .content {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 285px;
+}
+
+
+div.bar .content ul {
+  display: flex;
+  list-style: none;
+  height: 100%;
+}
+
+div.bar .content ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 15px;
+  position: relative;
+}
+
+div.bar .content ul li:not(.active) {
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+div.bar .content ul li:not(.active):hover {
+  filter: brightness(0.5);
+}
+
+div.bar .content ul li.active::after {
+  content: '';
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #3BB9E3;
+  border-radius: 1.25px 1.25px 0px 0px;
+}
+
+
+div.bar .content ul li span {
+  font-size: 13px;
+  color: #667581;
+  font-weight: bold;
+}
+
+div.bar .content ul li.active span {
+  filter: brightness(0.5);
+}
+
+
+div.bar .content ul li strong {
+  font-size: 18px;
+  color: #667581;
+  font-weight: bold;
+  margin-top: 2px;
+}
+
+div.bar .content ul li.active strong {
+  color: #3BB9E3;
+}
+
+div.bar .content .actions {
+  display: flex;
+}
+
+div.bar .content .actions button {
+  height: 34px;
+  border: 1px solid #3BB9E3;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 90px;
+  font-weight: bold;
+  font-size: 14px;
+  color: #3BB9E3;
+  border-radius: 16px;
+  transition: all 0.2s;      
+  background-color: #fff;     
+  
+  margin-right: 20px;
+}
+
+div.bar .content .actions img {
+  cursor: pointer;
+}
+
+div.bar .content .actions button:hover {
+  background-color: #3BB9E3;
+  color: #fff;
+
 }
