--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ button {
   cursor: pointer;
 }
 
+ul {
+  list-style: none;
+}
+
 body {
   background-color: #E6ECF0;
   font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
@@ -44,7 +48,6 @@ header#main-header .content {
 
 header#main-header nav ul {
   display: flex;
-  list-style: none;
   align-items: center;
 }
 
@@ -149,7 +152,6 @@ div.bar .content {
 
 div.bar .content ul {
   display: flex;
-  list-style: none;
   height: 100%;
 }
 
@@ -235,5 +237,117 @@ div.bar .content .actions img {
 div.bar .content .actions button:hover {
   background-color: #3BB9E3;
   color: #fff;
+}
 
+div.wrapper-content {
+  display: flex;
+}
+
+div.wrapper-content aside.profile {
+  width: 260px;
+}
+
+div.wrapper-content aside.profile img.avatar {
+  width: 200px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+
+  margin-top: -130px;
+}
+
+div.wrapper-content aside.profile h1 {
+  font-size: 21px;
+  color: #1f2226;
+
+  margin-top: 10px;
+}
+
+div.wrapper-content aside.profile span {
+  font-size: 14px;
+  color: #53626c;
+}
+
+
+div.wrapper-content aside.profile p {
+  font-size: 14px;
+  color: #1f2226;
+  margin-top: 15px;
+}
+
+div.wrapper-content aside.profile ul.list {
+  margin-top: 20px;
+}
+
+div.wrapper-content aside.profile ul.list li {
+  display: flex;
+  align-items: center;
+  
+  font-size: 14px;
+  color: #657786;
+
+  margin-top: 5px;
+}
+
+div.wrapper-content aside.profile ul.list li:first-child {
+  margin-top: 0;
+}
+
+div.wrapper-content aside.profile ul.list li a {
+  text-decoration: none;
+  color: #3BB9E3;
+  font-weight: bold;
+}
+
+div.wrapper-content aside.profile ul.list li img {
+  margin-right: 10px;
+}
+
+div.wrapper-content aside.profile .widget {
+  margin-top: 20px;
+}
+
+div.wrapper-content aside.profile .widget strong {
+  color: #3BB9E3;
+  font-weight: normal;
+  font-size: 14px;
+
+  display: flex;
+  align-items: center;
+}
+
+div.wrapper-content aside.profile .widget strong img {
+  margin-right: 5px;
+}
+
+
+div.wrapper-content aside.profile .followers ul {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+div.wrapper-content aside.profile .followers li {
+  width: 45px;
+  height: 45px;
+  background-color: #d0d5d9;
+  border-radius: 50%;
+  flex-shrink: 0;
+  flex-grow: 1;
+  flex: 1 0 auto;
+  margin: 0 5px 5px 0;
+}
+
+div.wrapper-content aside.profile .images ul {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+div.wrapper-content aside.profile .images ul li {
+  width: 80px;
+  height: 80px;
+  background-color: #d0d5d9;
+  border-radius: 5px;
+  flex-shrink: 0;
+  margin: 0 5px 5px 0;
 }
